; ModuleID = '/home/carl/AnghaBench/radare2/shlr/gdb/src/gdbclient/extr_core.c_gdbr_stop_reason.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/gdb/src/gdbclient/extr_core.c_gdbr_stop_reason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"?\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdbr_stop_reason(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 -1, i32* %3, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @gdbr_lock_enter(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %23

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load i32*, i32** %2, align 8
  %13 = call i64 @send_msg(i32* %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %2, align 8
  %17 = call i64 @read_packet(i32* %16, i32 0)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %15, %11, %8
  store i32 -1, i32* %3, align 4
  br label %23

20:                                               ; preds = %15
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @handle_stop_reason(i32* %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %19, %7
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @gdbr_lock_leave(i32* %24)
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @gdbr_lock_enter(i32*) #1

declare dso_local i64 @send_msg(i32*, i8*) #1

declare dso_local i64 @read_packet(i32*, i32) #1

declare dso_local i32 @handle_stop_reason(i32*) #1

declare dso_local i32 @gdbr_lock_leave(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
